small client ready

--- a/RabbitMq.Client.Console.csproj
+++ b/RabbitMq.Client.Console.csproj
@@ -6,6 +6,8 @@
         <RootNamespace>RabbitMq.Client.Console</RootNamespace>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <TargetName>rbt-client</TargetName>
+        <AssemblyName>rbt-client</AssemblyName>
     </PropertyGroup>
 
     <ItemGroup>
